--- a/package.json
+++ b/package.json
@@ -59,6 +59,11 @@
     "whatwg-fetch": "^3.4.1",
     "regenerator-runtime": "^0.13.7"
   },
+  "resolutions": {
+    "minimist": "^1.2.5",
+    "CodeMirror": "^5.59.4",
+    "node-fetch": "^2.6.1"
+  },
   "workspaces": [
     "packages/*"
   ]
